--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "eslint-plugin-import": "^2.22.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint codeWars/**/*.js"
   },
   "repository": {
     "type": "git",
