--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "add-prettier": "^1.3.2",
     "eslint-config-airbnb": "^18.2.1",
-    "jest": "^26.6.3"
+    "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
@@ -13,8 +16,9 @@
     "eslint-plugin-import": "^2.22.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint codeWars/**/*.js"
+    "test": "jest",
+    "lint": "npx eslint codeWars/**/*.js",
+    "lint:fix": "npm run lint -- --fix"
   },
   "repository": {
     "type": "git",
