--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/jest": "^26.0.22",
     "add-prettier": "^1.3.2",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-prettier": "^3.3.1",
